--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,29 +2,20 @@
 
 <h1>Products</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th class="sixth">Name</th>
-      <th class="sixth">Description</th>
-      <th class="sixth">Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container">
+  <div class="row">
     <% @products.each do |product| %>
-      <tr>
-        <td class="sixth"><%= product.name %></td>
-        <td class="sixth"><%= product.description %></td>
-        <td class="sixth"><%= product.image_url %></td>
-        <td class="sixth"><%= link_to 'Show', product %></td>
-        <td class="sixth"><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td class="sixth"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="col-sm-2 col-md-4">
+        <%= image_tag(product.image_url, class: "img-responsive") %>
+        <h2><%= product.name %></h2>
+        <p><%= product.description %></p>
+        <p>Colour: <%= product.colour %></p>
+        <p><strong>$<%= product.price %></strong></p>
+        <p class="links"><%= link_to 'Show', product %> | <%= link_to 'Edit', edit_product_path(product) %> | <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      </div><!-- /col -->
     <% end %>
-  </tbody>
-</table>
+  </div><!-- /row -->
+</div><!-- /container -->
 
 <br>
 
