--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,13 @@
           </div><!-- end projectName -->
         </div><!-- end navbar-header -->
 	        <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
+
+          <%= form_tag("/products", method: "get", class: "navbar-form navbar-left", role: "search") do %>
+            <div class="form-group">
+              <%= text_field_tag(:q, "Search for products", class: "form-control") %>
+            </div>
+            <%= submit_tag("Search", class: "btn btn-default") %>
+          <% end %>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "About", about_path %></li>
