--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -7,8 +7,17 @@ h2 {
 	font-size: 2em;
 }
 
-.product-show {
-	width: 90%;
+.nav-ctl {
+	margin-bottom: 1em;
+}
+
+.edit {
+	float: right;
+}
+
+.hi-low {
+	padding: 10px 20px 10px 20px;
+	margin-top: 1em;
 }
 
 .create {
