--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
     <% if notice %>
-      <div class="alert alert-danger" role="alert"><%= notice %></div>
+      <div class="alert alert-success" id="notice"><%= notice %></div>
     <% end %>
     <% if alert %>
       <div class="alert alert-danger" role="alert"><%= alert %></div>
