--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,9 @@
 <div class="row nav-ctl">
   <div class="col-md-12 col-sm-12">
 	  <%= link_to raw('<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Back'), products_path, :class => "btn btn-default"  %>
-	  <%= link_to raw('<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit'), edit_product_path(@product), :class => "btn btn-default edit"  %>
+	  <% if signed_in? && current_user.admin? %>
+		  <%= link_to raw('<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit'), edit_product_path(@product), :class => "btn btn-default edit"  %>
+		<% end %>
   </div><!-- /nav-ctl -->
 </div><!-- /row -->
 <div class="row">
