--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,26 @@
-<h1>About This Site</h1>
-<p>This site is a simple e-commerce Ruby on Rails webapp, as part of the <a href="https://careerfoundry.com" title="Link to CareerFoundry's website">CareerFoundry</a> Web Development curriculum.</p>
+<div class="row">
+  <div class="col-xs-12">
+    <h1>About<br /><span class="brand">Bicycle Berlin</span></h1>
+
+    <%= image_tag("BicycleBerlin.jpg", class: "img-responsive center", alt: "Bicycle Berlin logo") %>
+
+    <p class="p-link">Bicycle Berlin is a hypothetical bicycle store for the purpose of developing this simple e-commerce store. It&rsquo;s a Ruby on Rails web app developed as part of the <a href="https://careerfoundry.com" title="Link to CareerFoundry's website">CareerFoundry</a> Web Development curriculum by Brian Mikol.</p>
+
+    <p class="p-link">While all pictures, products, copyrights, and trademarks are property of their respective owners, the Bicycle Berlin logo is &copy; 2017 Brian Mikol (with credit to original artwork by <a href="https://www.dreamstime.com/stock-illustration-vintage-illustration-funny-bear-bike-grunge-effect-ride-bicycle-white-background-posters-t-shirts-image55857116#res17922037" title="Link to illustration's page on Dreamstime.com">Andrei Iushchenko</a>).</p>
+
+    <p>A list of credits &amp; resources that helped in inspiration and/or implementation:</p>
+
+    <ul class="p-link">
+    	<li>Landing Page
+        <ul>
+          <li>Jordan Hollinger: <a href="https://www.jordanhollinger.com/2014/01/29/css-gaussian-blur-behind-a-translucent-box/">CSS Gaussian blur behind a translucent box</a></li>
+          <li>Image: <a href="https://unsplash.com/@flo_karr?photo=nCj0zBLIaAk">Flo Karr</a></li>
+        </ul></li>
+      <li>Typography</li>
+        <ul>
+          <li>The lovely <a href="http://www.fontriver.com/font/dyer_arts_and_crafts/">Dyer Arts and Crafts</a> Art Deco typeface by Typo-Graf</li>
+          <li><a href="https://everythingfonts.com/font-face">Font-Face Generator</a> by Everything Fonts</li>
+        </ul>
+    </ul>
+  </div>
+</div>
