--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,83 +1,84 @@
 <div class="row nav-ctl">
   <div class="col-md-12 col-sm-12">
-	  <%= link_to raw('<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Back'), products_path, :class => "btn btn-default"  %>
-	  <% if signed_in? && current_user.admin? %>
-		  <%= link_to raw('<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit'), edit_product_path(@product), :class => "btn btn-default edit"  %>
-		<% end %>
+    <%= link_to raw('<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Back'), products_path, :class => "btn btn-default"  %>
+    <% if signed_in? && current_user.admin? %>
+      <%= link_to raw('<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit'), edit_product_path(@product), :class => "btn btn-default edit"  %>
+    <% end %>
   </div><!-- /nav-ctl -->
 </div><!-- /row -->
 <div class="row">
-  <div class="col-md-8 col-xs-12">
-		<%= image_tag(@product.image_url, class: "img-responsive") %>
+  <div class="col-sm-8 col-xs-12">
+    <%= image_tag(@product.image_url, class: "img-responsive") %>
   </div><!-- /col-md-8 -->
-  <div class="col-md-4 col-xs-12">
-	  <table>
-	  	<tr>
-	  		<td><strong>Name:</strong></td>
-	  	</tr>
-	  	<tr>
-	  		<td><h2><%= @product.name %></h2></td>
-	  	</tr>
-	  	<tr>
-	  		<td><strong>Description:</strong></td>
-	  	</tr>
-	  	<tr>
-	  		<td><%= @product.description %></td>
-	  	</tr>
-	  	<tr>
-	  		<td><strong>Image url:</strong></td>
-	  	</tr>
-	  	<tr>
-	  		<td><%= link_to "#{@product.image_url}", @product.image_url %></td>
-	  	</tr>
-	  	<tr>
-	  		<td><strong>Colour:</strong></td>
-	  	</tr>
-	  	<tr>
-	  		<td><%= @product.colour %></td>
-	  	</tr>
-	  	<tr>
-	  		<td><strong>Average Customer Rating:</strong></td>
-	  	</tr>
-	  	<tr>
-	  		<td>
-	  			<% if @product.comments.exists? %>
-	  				<div class="rated" data-score="<%= @product.average_rating %>"></div>
-					<% else %>
-						There are no reviews yet.
-					<% end %>
-				</td>
-	  	</tr>
-	  	<tr>
-	  		<td><strong>Price:</strong></td>
-	  	</tr>
-	  	<tr>
-	  		<td><%= number_to_currency(@product.price) %></td>
-	  	</tr>
-	  </table>
-	</div><!-- /col-md-4 -->
+  <div class="col-sm-4 col-xs-12">
+    <table>
+      <tr>
+        <td><strong>Name:</strong></td>
+      </tr>
+      <tr>
+        <td><h2><%= @product.name %></h2></td>
+      </tr>
+      <tr>
+        <td><strong>Description:</strong></td>
+      </tr>
+      <tr>
+        <td><%= @product.description %></td>
+      </tr>
+      <tr>
+        <td><strong>Image url:</strong></td>
+      </tr>
+      <tr>
+        <td><%= link_to truncate("#{@product.image_url}", length: 30), @product.image_url %></td>
+      </tr>
+      <tr>
+        <td><strong>Colour:</strong></td>
+      </tr>
+      <tr>
+        <td><%= @product.colour %></td>
+      </tr>
+      <tr>
+        <td><strong>Average Customer Rating:</strong></td>
+      </tr>
+      <tr>
+        <td>
+          <% if @product.comments.exists? %>
+            <div class="rated" data-score="<%= @product.average_rating %>"></div>
+          <% else %>
+            There are no reviews yet.
+          <% end %>
+        </td>
+      </tr>
+      <tr>
+        <td><strong>Price:</strong></td>
+      </tr>
+      <tr>
+        <td><%= number_to_currency(@product.price) %></td>
+      </tr>
+    </table>
+  </div><!-- /col-md-4 -->
 </div><!-- /row -->
 <%= render 'new_comment' %>
 <% if @product.comments.exists? %>
-	<div class="row">
-	  <div class="col-md-6 col-sm-12 hi-low">
-		  <h3>Highest Rated Review</h3>
-		  <hr />
-		  	<h5><span class="rated" data-score="<%= @product.highest_rating_comment.rating %>"></span> By <%= @product.highest_rating_comment.user.first_name %> <small><em> <%= "#{time_ago_in_words(@product.highest_rating_comment.created_at)} ago" %></em></small></h5>
+  <div class="row">
+    <div class="col-sm-6 col-xs-12 hi-low">
+      <h3>Highest Rated Review</h3>
+      <hr />
+        <h5><span class="rated" data-score="<%= @product.highest_rating_comment.rating %>"></span> By <%= @product.highest_rating_comment.user.first_name %> <small><em> <%= "#{time_ago_in_words(@product.highest_rating_comment.created_at)} ago" %></em></small></h5>
 
-		  	<p class="comment-body"><%= @product.highest_rating_comment.body %></p>
-	  </div><!-- /col-md-6 -->
-	  <div class="col-md-6 col-sm-12 hi-low">
-	  	<h3>Lowest Rated Review</h3>
-	  	<hr />
-	  	<h5><span class="rated" data-score="<%= @product.lowest_rating_comment.rating %>"></span> By <%= @product.lowest_rating_comment.user.first_name %> <small><em> <%= "#{time_ago_in_words(@product.lowest_rating_comment.created_at)} ago" %></em></small></h5>
+        <p class="comment-body"><%= @product.highest_rating_comment.body %></p>
+    </div><!-- /col-md-6 -->
+    <div class="col-sm-6 col-xs-12 hi-low">
+      <h3>Lowest Rated Review</h3>
+      <hr />
+      <h5><span class="rated" data-score="<%= @product.lowest_rating_comment.rating %>"></span> By <%= @product.lowest_rating_comment.user.first_name %> <small><em> <%= "#{time_ago_in_words(@product.lowest_rating_comment.created_at)} ago" %></em></small></h5>
 
-		  	<p class="comment-body"><%= @product.lowest_rating_comment.body %></p>
-	  </div><!-- /col-md-6 -->
-	</div><!-- /row -->
+        <p class="comment-body"><%= @product.lowest_rating_comment.body %></p>
+    </div><!-- /col-md-6 -->
+  </div><!-- /row -->
 <% end %>
 <div class="row">
-  <div class="col-md-12 col-sm-12">
-		<%= render 'comments' %>
-	</div><!-- /col-md-12 -->
+  <div class="col-xs-12">
+    <%= render 'comments' %>
+  </div><!-- /col-md-12 -->
 </div><!-- /row -->
+<%= will_paginate @comments, class: "apple_pagination" %>
