--- a/app/views/static_pages/thank_you.html.erb
+++ b/app/views/static_pages/thank_you.html.erb
@@ -1,5 +1,7 @@
-<div class="panel panel-default">
-	<div class="panel-body">
-		<p>Thank you. We have received your message and will response as soon as possible.</p>
-	</div><!-- /panel-body -->
-</div><!-- /panel -->
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-4">
+    <div class="contact-form">
+  		Thank you. We have received your message and would respond as soon as possible.<br /><br />(if we were real)
+    </div><!-- /contact-form -->
+  </div><!-- /col -->
+</div><!-- /row -->
