--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -214,12 +214,12 @@ h2 {
 
 @font-face {
     font-family: 'DyerArtsandCrafts';
-    src: url(font-path('fonts/DyerArtsandCrafts.eot'));
-    src: url(font-path('fonts/DyerArtsandCrafts.eot?#iefix')) format('embedded-opentype'),
-         url(font-path('fonts/DyerArtsandCrafts.woff2')) format('woff2'),
-         url(font-path('fonts/DyerArtsandCrafts.woff')) format('woff'),
-         url(font-path('fonts/DyerArtsandCrafts.ttf')) format('truetype'),
-         url(font-path('fonts/DyerArtsandCrafts.svg#DyerArtsandCrafts')) format('svg');
+    src: url(font-path('DyerArtsandCrafts.eot'));
+    src: url(font-path('DyerArtsandCrafts.eot?#iefix')) format('embedded-opentype'),
+         url(font-path('DyerArtsandCrafts.woff2')) format('woff2'),
+         url(font-path('DyerArtsandCrafts.woff')) format('woff'),
+         url(font-path('DyerArtsandCrafts.ttf')) format('truetype'),
+         url(font-path('DyerArtsandCrafts.svg#DyerArtsandCrafts')) format('svg');
 }
 
 .brand {
