--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -2,8 +2,10 @@
   src="https://checkout.stripe.com/checkout.js" class="stripe-button"
   data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
   data-image="<%= @product.image_url %>"
-  data-name="Demo Site"
+  data-name="Bicycle Berlin"
   data-description="<%= @product.name %>"
   data-amount="<%= @product.price*100 %>"
   data-locale="auto">
 </script>
+
+<%= hidden_field_tag(:product_id, @product.id) %>
