--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -2,7 +2,7 @@
 	<div class="row add-review">
 	  <div class="col-md-12 col-sm-12">
 			<h4>Add a Review!</h4>
-			<%= form_for([@product, @product.comments.build]) do |f| %>
+			<%= form_for([@product, @product.comments.build], remote: true) do |f| %>
 				<div class="col-md-8 col-sm-12">
 			 		<div class="form-group">
 						<%= f.label :body, "Comments" %>
