--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -42,7 +42,7 @@
       <tr>
         <td>
           <% if @product.comments.exists? %>
-            <div class="rated" data-score="<%= @product.average_rating %>"></div>
+            <div class="rated" id="average-rating" data-score="<%= @product.average_rating %>"></div>
           <% else %>
             There are no reviews yet.
           <% end %>
