--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,10 +1,12 @@
-<div class="col-sm-3 col-md-4 highlight">
-  <%= image_tag(product.image_url, class: "img-responsive results") %>
-  <h3><%= link_to product.name.titlecase, product %></h3>
-  <p><%= (product.description).truncate_words(10) %></p>
-  <p>Colour: <%= product.colour %></p>
-  <p><strong><%= number_to_currency(product.price) %></strong></p>
-  <% if signed_in? && current_user.admin? %>
-    <p class="links"><%= link_to 'Edit', edit_product_path(product) %> | <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-  <% end %>
-</div><!-- /col -->
+<% cache product do %>
+  <div class="col-sm-3 col-md-4 highlight">
+    <%= image_tag(product.image_url, class: "img-responsive results") %>
+    <h3><%= link_to product.name.titlecase, product %></h3>
+    <p><%= (product.description).truncate_words(10) %></p>
+    <p>Colour: <%= product.colour %></p>
+    <p><strong><%= number_to_currency(product.price) %></strong></p>
+    <% if signed_in? && current_user.admin? %>
+      <p class="links"><%= link_to 'Edit', edit_product_path(product) %> | <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+    <% end %>
+  </div><!-- /col -->
+<% end %>
