--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -37,6 +37,12 @@
         <td><%= @product.colour %></td>
       </tr>
       <tr>
+        <td><strong>Views:</strong></td>
+      </tr>
+      <tr>
+        <td><%= @product.views %></td>
+      </tr>
+      <tr>
         <td><strong>Average Customer Rating:</strong></td>
       </tr>
       <tr>
