--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -1,4 +1,5 @@
 <h3><%= @comment_count %> Customer Reviews</h3>
+<div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
 <div class="product-reviews">
   <% if @product.comments.exists? %>
     <% @comments.each do |comment| %>
