--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,7 +6,7 @@
     <% end %>
   </div><!-- /nav-ctl -->
 </div><!-- /row -->
-<div class="row">
+<div class="row" data-product-id="<%= @product.id %>">
   <div class="col-sm-8 col-xs-12">
     <%= image_tag(@product.image_url, class: "img-responsive img-zoom", data: "zoom_image='#{@product.image_url}'") %>
   </div><!-- /col-md-8 -->
