--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,18 +1,20 @@
-<div class="lplogo"><%= image_tag("BicycleBerlin-th.jpg", class: "img-responsive", alt: "Bicycle Berlin logo") %></div>
+<% cache do %>
+  <div class="lplogo"><%= image_tag("BicycleBerlin-th.jpg", class: "img-responsive", alt: "Bicycle Berlin logo") %></div>
+<% end %>
 
 <div class="search-container">
-	<div class="search-bg"></div>
-	<div class="search">
-		<h1>Looking for a new ride to cruise the Stra&szlig;en?</h1>
+  <div class="search-bg"></div>
+    <div class="search">
+      <h1>Looking for a new ride to cruise the Stra&szlig;en?</h1>
 
-		<div class="lpaction">
-	    <%= form_tag("/products", method: "get", class: "form-inline lpsearch", role: "search") do %>
-	      <div class="form-group">
-	        <%= text_field_tag(:q, nil, placeholder: "Search for bicycles", class: "form-control") %>
-	      </div>
-	      <%= submit_tag("Search", class: "btn btn-default") %>
-	    <% end %>
-	  </div>
-	  <div class="lpaction">or <%= link_to "Browse", products_path %></div>
-	</div><!-- /search -->
+      <div class="lpaction">
+        <%= form_tag("/products", method: "get", class: "form-inline lpsearch", role: "search") do %>
+          <div class="form-group">
+            <%= text_field_tag(:q, nil, placeholder: "Search for bicycles", class: "form-control") %>
+          </div>
+          <%= submit_tag("Search", class: "btn btn-default") %>
+        <% end %>
+      </div>
+    <div class="lpaction">or <%= link_to "Browse", products_path %></div>
+  </div><!-- /search -->
 </div><!-- /search-container -->
